# wpi-rail-ros-pkg

./: README
apps/NaoTrickOrTreat/: mainpage.dox  manifest.xml
apps/nao_tools/: CMakeLists.txt  mainpage.dox  manifest.xml
apps/nao_tools/launch/: nao_terminal_talk.launch
apps/nao_tools/src/: nao_terminal_talk.cpp
apps/nao_trick_or_treat/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml  trick_or_treat.launch
apps/nao_trick_or_treat/include/nao_trick_or_treat/: trick_or_treater.h
apps/nao_trick_or_treat/src/: trick_or_treater.cpp
lfd/: stack.xml
lfd/cba/: CMakeLists.txt  mainpage.dox  manifest.xml
lfd/cba/launch/: cba.launch  cba_test.launch
lfd/cba/src/: cba.cpp  cba_test.cpp
lfd/lfd_common/: CMakeLists.txt  mainpage.dox  manifest.xml
lfd/lfd_common/msg/: action.msg  action_complete.msg  classification_point.msg  conf_classification.msg  state.msg
lfd/lfd_common/srv/: conf_classification.srv
nao/src/: teleop_nao_ni.cpp
nao_rail/: stack.xml
nao_rail/nao_speech/: mainpage.dox  manifest.xml
nao_rail/nao_speech/launch/: nao_speech.launch
nao_rail/nao_vision/: CMakeLists.txt  mainpage.dox  manifest.xml  nao_vision.launch
rovio/: rovio.launch  stack.xml
rovio/rovio_av/: CMakeLists.txt  av.launch  mainpage.dox  manifest.xml
rovio/rovio_av/src/: rovio_audio.cpp
rovio/rovio_av/srv/: wav_play.srv
rovio/rovio_ctrl/: CMakeLists.txt  mainpage.dox  manifest.xml
rovio/rovio_ctrl/launch/: ctrl.launch  rovio_ctrl.launch  teleop.launch
rovio/rovio_shared/: CMakeLists.txt  mainpage.dox  manifest.xml
(+19 files in other folders)
